--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,10 +18,19 @@ jobs:
     defaults:
       run:
         working-directory: ./terraform
+    env:
+      TF_IN_AUTOMATION: "true"
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1   # Replace with your region
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
@@ -31,7 +40,7 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Fmt
+      - name: Terraform Fmt (Deploy only)
         if: github.event.inputs.action == 'deploy'
         run: terraform fmt -check
 
