--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,6 +15,8 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    outputs:
+      cleanup_failed: ${{ steps.cleanup.outputs.cleanup_failed }}
     defaults:
       run:
         working-directory: ./terraform
@@ -68,11 +70,17 @@ jobs:
 
       - name: Run SageMaker cleanup script (Destroy only)
         if: github.event.inputs.action == 'destroy'
+        id: cleanup
+        continue-on-error: true
         run: |
           echo "Running pre-destroy cleanup script..."
-          python -u ../clean-up-script.py
+          if ! python -u ../clean-up-script.py; then
+            echo "Cleanup failed, writing flag..."
+            echo "cleanup_failed=true" >> $GITHUB_OUTPUT
+          fi
         env:
           AWS_DEFAULT_REGION: us-east-1
+
 
       # -------------------------------------------------------------------
       # Terraform Destroy — runs after cleanup
