--- a/.github/workflows/retry-delete.yml
+++ b/.github/workflows/retry-delete.yml
@@ -1,15 +1,14 @@
 name: Retry MLflow Tracking Server Deletion
 
 on:
-  workflow_dispatch:
-    inputs:
-      region:
-        description: "AWS region (default: us-east-1)"
-        required: false
-        default: "us-east-1"
+  workflow_run:
+    workflows: ["Terraform Workflow"]
+    types: [completed]
 
 jobs:
   retry-delete:
+    # Run only if Terraform workflow finished successfully or failed (not cancelled)
+    if: ${{ github.event.workflow_run.conclusion != 'cancelled' }}
     runs-on: ubuntu-latest
     timeout-minutes: 120  # stop after 2 hours
 
@@ -22,14 +21,14 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ github.event.inputs.region }}
+          aws-region: us-east-1
 
       - name: Retry MLflow Tracking Server deletion
         shell: bash
         run: |
-          REGION="${{ github.event.inputs.region }}"
+          REGION="us-east-1"
           INTERVAL=60    # seconds between retries
-          MAX_ATTEMPTS=$(( (120*60) / INTERVAL ))  # 2 hours total runtime (120 minutes)
+          MAX_ATTEMPTS=$(( (120*60) / INTERVAL ))  # 2 hours total runtime
 
           echo "============================================================"
           echo "Retrying MLflow tracking server deletion in region: $REGION"
