--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       cleanup_failed: ${{ steps.cleanup.outputs.cleanup_failed }}
+      # <<<-- ADD THIS LINE -->>>
+      terraform_action: ${{ steps.set_action_output.outputs.action }}
     defaults:
       run:
         working-directory: ./terraform
@@ -33,6 +35,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1   # Replace with your region
+
+      - name: Set Terraform Action Output
+        id: set_action_output
+        run: echo "action=${{ github.event.inputs.action }}" >> $GITHUB_OUTPUT
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
