--- a/.github/workflows/retry-delete.yml
+++ b/.github/workflows/retry-delete.yml
@@ -15,11 +15,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download Terraform action artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: terraform_action
-          path: ./artifact
+      - name: Download Terraform action artifact from triggering workflow
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RUN_ID: ${{ github.event.workflow_run.id }}
+        run: |
+          echo "Fetching artifact from workflow run $RUN_ID..."
+          mkdir -p artifact
+          ARTIFACT_ID=$(gh api repos/${{ github.repository }}/actions/runs/$RUN_ID/artifacts \
+            --jq '.artifacts[] | select(.name=="terraform_action") | .id')
+          if [ -z "$ARTIFACT_ID" ]; then
+            echo "No terraform_action artifact found, exiting."
+            exit 0
+          fi
+          gh api repos/${{ github.repository }}/actions/artifacts/$ARTIFACT_ID/zip > artifact.zip
+          unzip artifact.zip -d artifact
 
       - name: Read Terraform action
         id: read_action
