Custom repository dispatch

--- a/.github/workflows/retry-delete.yml
+++ b/.github/workflows/retry-delete.yml
@@ -1,16 +1,8 @@
 name: Retry MLflow Tracking Server Deletion (Testing Ver)
 
 on:
-  workflow_dispatch:
-    inputs:
-      action:
-        description: 'Choose Terraform action'
-        required: true
-        default: 'deploy'
-        type: choice
-        options:
-          - deploy
-          - destroy
+  repository_dispatch:
+    types: [delete-mlflow]
 
 jobs:
   retry-delete:
