--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -86,3 +86,12 @@ jobs:
         if: github.event.inputs.action == 'destroy'
         run: terraform destroy -auto-approve
 
+      # ---------------------------------------------------------------
+      # Trigger retry-delete workflow
+      # ---------------------------------------------------------------
+      - name: Repository Dispatch to Trigger retry-delete workflow
+        if: github.event.inputs.action == 'destroy'
+        uses: peter-evans/repository-dispatch@v4
+        with:
+          event-type: delete-mlflow
+
