--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -94,4 +94,5 @@ jobs:
         uses: peter-evans/repository-dispatch@v4
         with:
           event-type: delete-mlflow
+          token: ${{ secrets.PAT_TOKEN }}
 
